rule node config

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-paginate": "^8.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.7",
     "reactflow": "^11.9.4",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.19"
