--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.7",
+    "react-toastify": "^9.1.3",
     "reactflow": "^11.9.4",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.19"
